--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 50a11f8
-	base = 08c1347
-	trim = 
-	trimbase = 
+	base = f2c52ec
+	trim = ament_black
+	trimbase = 08c1347
