--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 50a11f8
-	base = 0297ae4
-	trim = 
-	trimbase = 
+	base = b20c11b
+	trim = ament_cmake_black
+	trimbase = 0297ae4
