--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/ament_black
-	previous = 
-	base = f2c52ec
+	previous = f2c52ec
+	base = 4307207
 	trim = 
 	trimbase = 
