--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/ament_black
-	previous = 
-	base = 7be71ad
+	previous = 7be71ad
+	base = 09a25db
 	trim = 
 	trimbase = 
