--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/ament_cmake_black
-	previous = 
-	base = b20c11b
+	previous = b20c11b
+	base = e8d658a
 	trim = 
 	trimbase = 
