--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/ament_cmake_black
-	previous = 
-	base = 691993e
+	previous = 691993e
+	base = c5745b2
 	trim = 
 	trimbase = 
