--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 50a11f8
-	base = 36b34ed
-	trim = 
-	trimbase = 
+	base = 7b57284
+	trim = ament_black
+	trimbase = 36b34ed
