--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 50a11f8
-	base = abc3186
-	trim = 
-	trimbase = 
+	base = 4201097
+	trim = ament_cmake_black
+	trimbase = abc3186
