--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_black
-	previous = 
-	base = 4201097
+	previous = 4201097
+	base = d0df5e9
 	trim = 
 	trimbase = 
