--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_black
-	previous = 
-	base = 2d932be
+	previous = 2d932be
+	base = 8e72bb4
 	trim = 
 	trimbase = 
