--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_black
-	previous = 
-	base = 7b57284
+	previous = 7b57284
+	base = fdfe0d4
 	trim = 
 	trimbase = 
