--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_black
-	previous = 
-	base = e4aa409
+	previous = e4aa409
+	base = 7ce6a38
 	trim = 
 	trimbase = 
