--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_black
-	previous = 
-	base = 5108c64
+	previous = 5108c64
+	base = 6a46f60
 	trim = 
 	trimbase = 
