--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_black
-	previous = 
-	base = f2fe4a8
+	previous = f2fe4a8
+	base = 8062ad4
 	trim = 
 	trimbase = 
